src/test/ui/single-use-lifetime/zero-uses-in-fn.stderr
error: lifetime parameter `'a` never used
  --> $DIR/zero-uses-in-fn.rs:17:6: in fn d
   |
LL | fn d<'a>() { } //~ ERROR `'a` never used
   |      ^^
   |
note: lint level defined here
  --> $DIR/zero-uses-in-fn.rs:13:9
   |
LL | #![deny(unused_lifetime)]
   |         ^^^^^^^^^^^^^^^

error: aborting due to previous error

